@@ -3,6 +3,7 @@ Revision history for POE-Quickie
 {{$NEXT}}
     - Shutdown properly when connected to a server which we've failed to log
       into. Depend on POE::Component::IRC 6.36 for this.
+    - Allow a default server again
 
 0.12  Sat Jul 24 21:34:01 GMT 2010
     - Exit after --version
